hw2/service.yaml
apiVersion: v1
kind: Service                   
metadata:
 name: shortener-srv  
spec:
#  type: NodePort                
 type: ClusterIP
 ports:                        
   - name: http
     port: 8080
     targetPort: 8080
 selector:
   app: shortener
