hw2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 annotations:
   kubernetes.io/ingress.class: nginx
   ingress.kubernetes.io/rewrite-target: /
 labels:
   app: shortener-ing
 name: shortener-ing
spec:
 backend:
   serviceName: shortener-srv
   servicePort: 8080
 rules:
   - host: shortener.local
     http:
       paths:
         - path: /
           backend:
             serviceName: shortener-srv
             servicePort: 8080
